Initial setup for AVR target

--- a/TODO
+++ b/TODO
@@ -1,1 +1,11 @@
 - cmake property CXX_STANDARD does not work for libapp
+- split up host, ybpi and avr sdk image creation
+- make common base image for host, ybpi and avr
+- use common base for workspaces
+- clean up avrdude usage, e.g. tty access
+- clean up avr build in makefile
+- clean up avr build in cmake file
+- setup tests for avr target
+- setup lib and main for avr target
+
+
