Update todo list

--- a/TODO
+++ b/TODO
@@ -1,10 +1,6 @@
 - cmake property CXX_STANDARD does not work for libapp
-- use common base for workspaces
 - clean up avrdude usage, e.g. tty access
-- clean up avr build in makefile
-- clean up avr build in cmake file
-- setup tests for avr target
-- setup lib and main for avr target
-- remove obsolete host-sdk makefile and docker from tools
-- rename host workspace into amd64-workspace
+- extract stubs, spies etc from device tests
+- fixture for device tests? to remove duplicate code
+- device initialization, how to share between exe and feature?
 
