Timer update function

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 - cmake property CXX_STANDARD does not work for libapp
-- clean up avrdude usage, e.g. tty access
-- extract stubs, spies etc from device tests
-- fixture for device tests? to remove duplicate code
 - device initialization, how to share between exe and feature?
+- remove thread from feature, replace by idle function called once per tick
+- remove timer interface
+
 
