--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 - device initialization, how to share between exe and feature?
 - use systick to drive device in feature
 - refactor timer, hide Timer_update
+- share device seams between tests and features
 
