Update todo list

--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
+- Execute device loop only once per tick, idle/sleep mode
 - device initialization, how to share between exe and feature?
-- use systick to drive device in feature
-- refactor timer, hide Timer_update
 - share device seams between tests and features
 - refactor gpio tests, fixtures, but still test port and pin association
 - gpio tests get direction
