--- a/TODO
+++ b/TODO
@@ -1,8 +1,15 @@
+# device
+
 - Execute device loop only once per tick, idle/sleep mode
 - device initialization, how to share between exe and feature?
 - share device seams between tests and features
 - refactor gpio tests, fixtures, but still test port and pin association
 - gpio tests get direction
 - button: push, press ...
+
+# module
+
+- interrupt stub in feature
+- split interrupt into thin sys call layer, and doorbell functionality
 
 
